--- a/nginx/index.html
+++ b/nginx/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Hello from ArgoCD CI/CD!</title>
+    <title>Hello from ArgoCD CIddd/CD!</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -9,17 +10,21 @@
             text-align: center;
             padding: 50px;
         }
+
         h1 {
             color: #333;
         }
+
         p {
             color: #666;
         }
     </style>
 </head>
+
 <body>
     <h1>Welcome to Nginx on EKS!</h1>
     <p>This is version 1.0 deployed via ArgoCD CI/CD pipeline.</p>
     <p>Hello from EKS cluster in ap-southeast-2 (Sydney)!</p>
 </body>
+
 </html>
