chore: Trigger simplified CI

--- a/nginx/index.html
+++ b/nginx/index.html
@@ -30,3 +30,4 @@
 </html><!-- CI Trigger -->
 <!-- Final Trigger -->
 <!-- Final CI Trigger for Valid Image -->
+<!-- Triggering simplified placeholder CI -->
