chore: real trigger after syntax fix

--- a/nginx/index.html
+++ b/nginx/index.html
@@ -32,3 +32,4 @@
 <!-- Final CI Trigger for Valid Image -->
 <!-- Triggering simplified placeholder CI -->
 <!-- Resetting for final fix by AI -->
+<!-- Triggering CI after YAML fix -->
