chore: final trigger after logic fix

--- a/nginx/index.html
+++ b/nginx/index.html
@@ -33,3 +33,4 @@
 <!-- Triggering simplified placeholder CI -->
 <!-- Resetting for final fix by AI -->
 <!-- Triggering CI after YAML fix -->
+<!-- Triggering CI for final verification -->
