chore: final verification trigger

--- a/nginx/index.html
+++ b/nginx/index.html
@@ -34,3 +34,4 @@
 <!-- Resetting for final fix by AI -->
 <!-- Triggering CI after YAML fix -->
 <!-- Triggering CI for final verification -->
+<!-- Final Verification Trigger -->
