chore: final trigger after manifest reset

--- a/nginx/index.html
+++ b/nginx/index.html
@@ -35,3 +35,4 @@
 <!-- Triggering CI after YAML fix -->
 <!-- Triggering CI for final verification -->
 <!-- Final Verification Trigger -->
+<!-- Triggering absolute final CI -->
