chore: trigger after ingress fix

--- a/nginx/index.html
+++ b/nginx/index.html
@@ -36,3 +36,4 @@
 <!-- Triggering CI for final verification -->
 <!-- Final Verification Trigger -->
 <!-- Triggering absolute final CI -->
+<!-- Triggering ALB check -->
