--- a/nginx/index.html
+++ b/nginx/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Hello from ArgoCD CIddd/CD!</title>
+    <title>Hello from ArgoCD CIㄹㄹㄹddd/CD!</title>
     <style>
         body {
             font-family: Arial, sans-serif;
